@@ -1,5 +1,8 @@
 English Lead ChangeLog
 
+***** ChangeLog for 1.6 compared to 1.5.1 *****
+NEW : Feature to remove thirdparty obligation
+
 ***** ChangeLog for 1.5.1 compared to 1.5 *****
 NEW : Italian language
 
